@@ -2,6 +2,18 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-07-24:
+
+- Fixed a serious bug in the arithmetic subsystem that was triggered on
+  non-Intel processors (such as ARM): any division of an integer by a
+  negative integer threw a spurious "divide by zero" error. Bug introduced
+  in ksh 93q 2005-01-31.
+
+- Similarly fixed: the return value of the assignment of a negative value to
+  an unsigned integer in an arithmetic expression was always 0 on ARM
+  processors (instead of being equal to the assigned wrapped-around value).
+  Bug introduced by the discipline fix on 2024-01-21.
+
 2024-07-21:
 
 - Fixed a long-standing parsing bug: a '((' that was unmatched by
